# webinar_20250329

./: README.md
demo/clinical_research_query_assistant/: README.md
demo/clinical_research_query_assistant/backend/: pyproject.toml
demo/clinical_research_query_assistant/backend/app/: main.py
demo/clinical_research_query_assistant/frontend/: index.html  package-lock.json  package.json
demo/clinical_research_query_assistant/frontend/src/: App.tsx
demo/clinical_research_query_assistant/presentation/: slides.md
demo/llm_generated_biostatistics_book/: book.md  chapter_1.md  chapter_10.md  chapter_2.md  chapter_3.md  chapter_4.md  chapter_5.md  chapter_6.md  chapter_7.md  chapter_8.md  chapter_9.md  outline.md
demo/llm_generated_early_ACP/research/: アドバンス・ケア・プランニング.md  ライフステージに応じたACP.md  事前指示書.md  代理意思決定者.md  価値観の明確化.md  従来の終末期主体ACPの限界.md  意思決定能力.md  意思決定能力喪失リスク.md  早期実施のメリット.md  若年層・健康時のACP.md
demo/llm_generated_early_ACP/早期Advance Care Planningとは/: chapter_1.md  outline.md
demo/readme_creation_demo/: README.md  system_chat_log.md  user_chat_log.md
